--- a/.lando.yml
+++ b/.lando.yml
@@ -44,6 +44,10 @@ services:
       command: '/mailpit'
     volumes:
       mailpit:
+  pma:
+    type: phpmyadmin
+    hosts:
+      - database
 
 tooling:
   wp:
