Add XDebug config

--- a/config/php.ini
+++ b/config/php.ini
@@ -1,2 +1,7 @@
 html_errors = 1
+
+# XDebug
+xdebug.start_with_request = yes
+
+# Mail
 sendmail_path = /usr/local/bin/mailpit sendmail -S mailpit:1025
