--- a/.lando.yml
+++ b/.lando.yml
@@ -3,7 +3,6 @@ name: thelovekesh
 recipe: wordpress
 
 config:
-  php: 8.2
   via: nginx
   database: mariadb:10.6
   composer_version: 2
@@ -24,10 +23,9 @@ services:
       environment:
         XDEBUG_MODE:
         PHP_IDE_CONFIG: "serverName=appserver"
+      image: thelovekesh/php:latest
     run:
-      - bash bin/local-env/setup-wordpress.sh
-    install_dependencies_as_root:
-      - bash bin/local-env/install-dependencies.sh
+      - setup-wordpress
   mailpit:
     type: lando
     app_mount: delegated
@@ -73,9 +71,8 @@ tooling:
     service: appserver
   wp-logs:
     service: appserver
-    cmd:
-      - tail -f /tmp/php-error.log 2>/dev/null || { echo "\e[31mNo logs found!\e[0m"; }
+  setup-wordpress:
+    service: appserver
   xdebug:
     service: appserver
-    cmd: bash bin/local-env/xdebug.sh
     user: root
