Update content location block

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -45,10 +45,10 @@ server {
 		try_files $uri $uri/ /index.php?$args;
 	}
 
-	location ~ ^/wp-content/(.*)$ {
+	location ~ ^/content/(.*)$ {
 		root /app;
 		autoindex on;
-		try_files /wp-content/$1 /index.php?$args;
+		try_files /content/$1 /index.php?$args;
 	}
 
 	location ~ \.php$ {
